--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_home">Home</string>
     <string name="title_bookmark">Bookmark</string>
+    <string name="title_profile">Profile</string>
+    <string name="content">Content</string>
+    <string name="description">Description</string>
+    <string name="author">Author</string>
 </resources>
